# reportbro-designer-api

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  docker-compose.mysql.yml  docker-compose.yml  log_conf.yaml  logging.conf  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
reportbro_designer_api/: clients.py  errors.py  main.py  router.py  settings.py  version.py
reportbro_designer_api/backend/: __init__.py  base.py  db.py  dbcli.py  models.py  s3.py  schemas.py
reportbro_designer_api/backend/backends/: base.py  db.py  s3.py
reportbro_designer_api/backend/migrate/: alembic.ini  env.py
reportbro_designer_api/backend/migrate/versions/: 748587e32a5d_init.py
reportbro_designer_api/endpoints/: main_view.py  page_view.py  reportbro_api.py  reportbro_schema.py
reportbro_designer_api/static/reportbro/: reportbro.css  reportbro.css.map  reportbro.js  reportbro.js.LICENSE.txt  reportbro.js.map  reportbro.min.js  reportbro.min.js.map
reportbro_designer_api/static/ui/: index.html
reportbro_designer_api/static/ui/assets/: index-0333ddd9.js  index-5bf46caa.css  index-a3ecea17.js
reportbro_designer_api/storage/: __init__.py  base.py  mange.py  schemas.py  storages.py
reportbro_designer_api/storage/storages/: base.py  local.py  s3.py
reportbro_designer_api/templates/: designer.html.jinja2  layout.html.jinja2
reportbro_designer_api/utils/: logger.py  model.py  report.py  s3.py  s3_client.py
reportbro_designer_api/utils/s3/: base.py  s3_client.py
reportbro_manage_ui/: .env.prod  .eslintrc.cjs  Dockerfile  docker-entrypoint.sh  nginx.conf  package.json  tsconfig.json  vite.config.ts
reportbro_manage_ui/src/: axios.d.ts  env.d.ts  main.tsx
reportbro_manage_ui/src/api/: index.ts
reportbro_manage_ui/src/api/base-server/: define.ts  index.ts
reportbro_manage_ui/src/api/hooks/: error.ts  index.ts  response.ts
reportbro_manage_ui/src/components/commonForm/: index.tsx
reportbro_manage_ui/src/components/commonModal/: index.tsx
reportbro_manage_ui/src/components/commonTable/: config.ts  index.tsx
reportbro_manage_ui/src/components/datetime/: index.tsx
reportbro_manage_ui/src/components/formatedLink/: index.tsx
reportbro_manage_ui/src/components/lifeCircle/: index.tsx
reportbro_manage_ui/src/components/toolBtn/: index.tsx
reportbro_manage_ui/src/config/: index.ts
reportbro_manage_ui/src/layouts/: default.tsx
reportbro_manage_ui/src/pages/templates/: btnAction.tsx  index.tsx  versions.tsx
reportbro_manage_ui/src/pages/templates/modals/: useCloneForm.tsx  useTplForm.tsx
reportbro_manage_ui/src/routes/: index.tsx
reportbro_manage_ui/src/styles/: index.scss  index.ts
reportbro_manage_ui/src/styles/ts-style/: layout.ts
reportbro_manage_ui/src/utils/: formatDate.ts
scripts/: build_designer.sh  otf2ttf.py  otf2ttf.sh  run.py  upgrade_test_db.sh
tests/: conftest.py  demo_emojis.py  test_backend_api.py  test_checkbox_api.py  test_report_api.py  test_s3_api.py  test_storage_api.py  test_web_api.py
tests/data/: checkbox_template.json  default_template.json  default_template_data.json  padding_template.json
